--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 body {
   background-color: beige;
 }
+h1 {
+  color: cornflowerblue;
+  transition: color 1s ease-in-out;
+}
+
+.clicked {
+  color: violet;
+}
+
+.font {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
