--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,44 @@
 .hidden {
   display: none;
 }
+
+img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  z-index: -1;
+  opacity: 70%;
+}
+
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+#clock {
+  color: rgb(195, 195, 179);
+  font-weight: 900;
+  font-size: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-shadow: 4px 4px 4px black;
+}
+
+#login-form input,
+#todo-form input {
+  border: none;
+  padding: 7px;
+  border-radius: 20px;
+  background-color: rgb(195, 195, 179);
+}
+
+#login-form {
+  flex-direction: column;
+  margin: 0px 30px;
+  text-align: center;
+}
