--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body {
   justify-content: center;
   align-items: center;
   text-shadow: 4px 4px 4px var(--subColor);
+  margin-bottom: 30px;
 }
 
 #login-form input,
@@ -38,6 +39,7 @@ body {
   border-radius: 20px;
   background-color: var(--mainColor);
   text-align: center;
+  font-size: 20px;
 }
 #login-form input:focus,
 #todo-form input:focus {
@@ -49,6 +51,7 @@ body {
   flex-direction: column;
   margin: 0px 30px;
   text-align: center;
+  font-size: 50px;
 }
 
 #greeting {
@@ -64,7 +67,7 @@ body {
 #todo-list {
   color: var(--subColor);
   text-shadow: 4px 4px 4px var(--mainColor);
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 900;
   display: flex;
   flex-direction: column;
@@ -75,7 +78,7 @@ body {
 }
 
 #quote {
-  position: absolute;
+  position: fixed;
   color: var(--subColor);
   text-shadow: 4px 4px 4px var(--mainColor);
   display: flex;
