--- a/css/style.css
+++ b/css/style.css
@@ -25,56 +25,65 @@ body {
   color: var(--mainColor);
   font-weight: 900;
   font-size: 100px;
+  text-shadow: 4px 4px 4px var(--subColor);
+  margin: 10px 0px;
   display: flex;
   justify-content: center;
   align-items: center;
-  text-shadow: 4px 4px 4px var(--subColor);
-  margin-bottom: 30px;
+}
+
+.login,
+.todo {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
+}
+#login-form,
+#todo-form {
+  margin: 0px;
+  font-size: 50px;
+  width: 30px;
+  outline-style: none;
+}
+
+#login-form input {
+  display: block;
 }
 
 #login-form input,
 #todo-form input {
-  border: none;
   padding: 10px;
   border-radius: 20px;
   background-color: var(--mainColor);
-  text-align: center;
+  color: var(--subColor);
   font-size: 20px;
+  border: none;
 }
+
 #login-form input:focus,
 #todo-form input:focus {
   outline: 1px solid var(--subColor);
 }
-
-#login-form,
-#todo-form {
-  flex-direction: column;
-  margin: 0px 30px;
-  text-align: center;
-  font-size: 50px;
-}
-
 #greeting {
   display: flex;
   align-items: center;
   justify-content: center;
   color: var(--mainColor);
   font-weight: 600;
-  font-size: 70px;
+  font-size: 60px;
   text-shadow: 4px 4px 4px var(--subColor);
 }
 
 #todo-list {
   color: var(--subColor);
-  text-shadow: 4px 4px 4px var(--mainColor);
-  font-size: 25px;
+  text-shadow: 2px 2px 2px var(--mainColor);
+  font-size: 20px;
   font-weight: 900;
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 10px;
-  padding: 5px;
+  line-height: 1em;
 }
 
 #quote {
