Revert "css update"
This reverts commit cbae3880cd2dc80606011692c9f7ec74f25756b8.

--- a/css/style.css
+++ b/css/style.css
@@ -25,65 +25,56 @@ body {
   color: var(--mainColor);
   font-weight: 900;
   font-size: 100px;
-  text-shadow: 4px 4px 4px var(--subColor);
-  margin: 10px 0px;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.login,
-.todo {
-  display: flex;
-  text-align: center;
-  align-items: center;
-  flex-direction: column;
-}
-#login-form,
-#todo-form {
-  margin: 0px;
-  font-size: 50px;
-  width: 30px;
-  outline-style: none;
-}
-
-#login-form input {
-  display: block;
+  text-shadow: 4px 4px 4px var(--subColor);
+  margin-bottom: 30px;
 }
 
 #login-form input,
 #todo-form input {
+  border: none;
   padding: 10px;
   border-radius: 20px;
   background-color: var(--mainColor);
-  color: var(--subColor);
+  text-align: center;
   font-size: 20px;
-  border: none;
 }
-
 #login-form input:focus,
 #todo-form input:focus {
   outline: 1px solid var(--subColor);
 }
+
+#login-form,
+#todo-form {
+  flex-direction: column;
+  margin: 0px 30px;
+  text-align: center;
+  font-size: 50px;
+}
+
 #greeting {
   display: flex;
   align-items: center;
   justify-content: center;
   color: var(--mainColor);
   font-weight: 600;
-  font-size: 60px;
+  font-size: 70px;
   text-shadow: 4px 4px 4px var(--subColor);
 }
 
 #todo-list {
   color: var(--subColor);
-  text-shadow: 2px 2px 2px var(--mainColor);
-  font-size: 20px;
+  text-shadow: 4px 4px 4px var(--mainColor);
+  font-size: 25px;
   font-weight: 900;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  line-height: 1em;
+  margin: 10px;
+  padding: 5px;
 }
 
 #quote {
